# poly-analysis

./: .gitignore  CHANGELOG.md  README.md  README_zh.md  main.py  open_with_params.py  package-lock.json  package.json  pyproject.toml
analysis_poly/: __init__.py  activity_discovery.py  activity_page_cache.py  analyzer.py  cli.py  main.py  market_cache.py  market_result_cache.py  models.py  open_with_params.py  polymarket_client.py  profit_engine.py  run_manager.py  run_once.py  web.py
analysis_poly/templates/: index.html
app/: analyzer.py  cli.py  logging_config.py  main.py  market_cache.py  market_result_cache.py  models.py  open_with_params.py  polymarket_client.py  slugs.py  web.py
frontend/src/: App.jsx  constants.js  main.jsx  styles.css
frontend/src/components/: AddressBookModal.jsx  AdvancedModal.jsx  ConfigPanel.jsx  MakerRebateTable.jsx  MarketTable.jsx  PnlCharts.jsx  QuantMetricsPanel.jsx  StatusCard.jsx
frontend/src/services/: api.js
frontend/src/utils/: addressBook.js  dateTime.js  format.js  status.js
tests/: test_activity_page_cache.py  test_analyzer_chunking.py  test_analyzer_csv.py  test_analyzer_discovery.py  test_analyzer_filter_empty_market.py  test_analyzer_market_cache.py  test_analyzer_result_cache_compat.py  test_market_cache.py  test_market_result_cache.py  test_models_defaults.py  test_open_with_params.py  test_profit_engine.py  test_run_manager.py  test_run_once.py  test_slugs.py
