[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "analysis-poly"
version = "0.1.4"
description = "Polymarket real-profit web analyzer"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "pydantic>=2.11.0",
    "uvicorn>=0.35.0",
]

[project.scripts]
analysis-poly = "analysis_poly.cli:main"
analysis-poly-open = "analysis_poly.open_with_params:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["analysis_poly*"]

[tool.setuptools.package-data]
analysis_poly = [
    "templates/*.html",
    "static/dist/*.js",
    "static/dist/*.css",
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"

[dependency-groups]
dev = [
    "build>=1.4.0",
    "twine>=6.2.0",
]
